sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: type Boolea0
	var ant:Boolea0=falsen;
                ^AlgBubbleSort1:4: error: not found: value falsen
	var ant:Boolea0=falsen;
                        ^